--- a/ImageRecognition/Info.plist
+++ b/ImageRecognition/Info.plist
@@ -37,5 +37,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSCameraUsageDescription</key>
+    <string>We need access to your camera for tracking objects</string>
 </dict>
 </plist>
